add relro at cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@
 #    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-SET(CMAKE_C_FLAGS "-Ofast -fstack-protector-all")
+SET(CMAKE_C_FLAGS "-Ofast -fstack-protector-all -D_FORTIFY_SOURCE=2 -Wl,-z,relro,-z,now")
 
 SET(tombpoolSources tombpool)
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
